# RayTracerCpp

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  Clock.cpp  Common.h  Hexagon.cpp  Planes.cpp  Projectile.cpp  Reflection.cpp  Scene.cpp  Silhouette.cpp
lib/: Bounds.cpp  Bounds.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Group.cpp  Group.h  Intersection.cpp  Intersection.h  Lighting.cpp  Lighting.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Pattern.cpp  Pattern.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Transformation.h  Tuple.cpp  Tuple.h  World.cpp  World.h  tuple.cpp  tuple.h
tests/: Bounds_test.cpp  CMakeLists.txt  Camera_test.cpp  Canvas_test.cpp  Common.cpp  Common.h  Group_test.cpp  Intersection_test.cpp  Lighting_test.cpp  Material_test.cpp  Matrix_test.cpp  Pattern_test.cpp  Pattern_test.h  Ray_test.cpp  Shape_test.cpp  Shape_test.h  Sphere_test.cpp  Transformation_test.cpp  Tuple_test.cpp  World_test.cpp  tuple_test.cpp
