add_library(ray_tracer)

target_sources(ray_tracer
        PRIVATE
        Tuple.h
        Canvas.h
        Canvas.cpp
        Matrix.h
        Transformation.h
        Ray.h
        Ray.cpp
        Shape.h
        Shape.cpp
        Intersection.h
        Intersection.cpp
        Lighting.h
        Lighting.cpp
        World.h
        World.cpp
        Camera.h
        Camera.cpp
        Pattern.h
        Pattern.cpp
        Group.h
        Group.cpp
)

target_include_directories(ray_tracer
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)